--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_screenutil:
   loading_animation_widget:
+  get:
+  get_storage:
   dio:
   intl:
   url_launcher:
