--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,21 @@ dependencies:
   permission_handler:
   device_info_plus:
 
+  provider: ^6.0.5
+  flutter_hooks: ^0.20.3
+  package_info_plus: ^5.0.1
+  google_mobile_ads: ^4.0.0
+  applovin_max: ^3.2.0
+  ironsource_adpluginx: ^1.0.2
+  unity_ads_plugin: ^0.3.10
+  user_messaging_platform: ^1.3.0
+  onesignal_flutter: ^5.0.4
+  app_tracking_transparency: ^2.0.4
+  in_app_review: ^2.0.6
+  url_launcher: ^6.2.2
+  logger: ^2.0.2+1
+  dart_ping_ios: ^4.0.1
+  dart_ping: ^9.0.0
 
 dev_dependencies:
   flutter_test:
